src/ui/render/snapshots/rust_hf_downloader__ui__render__size_matrix_models_focus_60x20.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0   │"
"└──────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────┐"
"│     1. meta-llama/Llama-3.1-8B by meta-llama ↓1.2M ♥12.3K│"
"│>>   2. mistralai/Mistral-7B-v0.3 by mistralai ↓987.7K ♥8.│"
"│     3. Qwen/Qwen2.5-Coder-32B-Instruct by Qwen ↓45.7K ♥67│"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Quantization Types [Select a┐┌Files [Select a quantization┐"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘"
