src/ui/render/snapshots/rust_hf_downloader__ui__render__size_matrix_quant_view_60x20.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0   │"
"└──────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────┐"
"│  1. meta-llama/Llama-3.1-8B by meta-llama ↓1.2M ♥12.3K [2│"
"│  2. mistralai/Mistral-7B-v0.3 by mistralai ↓987.7K ♥8.9K │"
"│  3. Qwen/Qwen2.5-Coder-32B-Instruct by Qwen ↓45.7K ♥678 [│"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Quantization Types──────────┐┌Files───────────────────────┐"
"│>>    5.52 GB  Q4_K_M       ││>>    4.58 GB  Llama-3.…gguf│"
"│      7.92 GB  Q8_0         ││    953.67 MB  Llama-3.…gguf│"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘"
