src/ui/render/snapshots/rust_hf_downloader__ui__render__size_matrix_standard_120x40.snap
---
source: src/ui/render/mod.rs
assertion_line: 407
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+S: Save]────────────────────────────────────────────────────┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0  |  [No Filters]                                       v<VERSION>│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│     1. meta-llama/Llama-3.1-8B by meta-llama ↓1.2M ♥12.3K [2024-07-03] [text-generation, llama]                      │"
"│>>   2. mistralai/Mistral-7B-v0.3 by mistralai ↓987.7K ♥8.9K [text-generation]                                        │"
"│     3. Qwen/Qwen2.5-Coder-32B-Instruct by Qwen ↓45.7K ♥678 [2024-11-01]                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Model Information─────────────────────────────────────────┐┌Repository Files──────────────────────────────────────────┐"
"│ID: meta-llama/Llama-3.1-8B                               ││    README.md  12.06 KB                                   │"
"│Library: transformers                                     ││  ▾ Q4_K_M/  4.58 GB (2 files)                            │"
"│Pipeline: text-generation                                 ││      Llama-3.1-8B-Q4_K_M.gguf  4.58 GB                   │"
"│Base Model: meta-llama/Llama-3.1-8B-Instruct              ││      Llama-3.1-8B-Q4_K_M-00002-of-00002.gguf  953.67 MB  │"
"│License: llama3.2                                         ││  ▸ original/  14.95 GB (1 files)                         │"
"│Languages: en, de                                         ││                                                          │"
"│Files: 3 (9.22 GB)                                        ││                                                          │"
"│                                                          ││                                                          │"
"│Tags:                                                     ││                                                          │"
"│text-generation, llama, facebook, meta                    ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Selection: 2 of 3                                                                                                     │"
"│Repository files loaded                                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
