src/ui/render/snapshots/rust_hf_downloader__ui__render__size_matrix_standard_61x23.snap
---
source: src/ui/render/mod.rs
assertion_line: 407
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+S┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0    │"
"└───────────────────────────────────────────────────────────┘"
"┌Results────────────────────────────────────────────────────┐"
"│     1. meta-llama/Llama-3.1-8B by meta-llama ↓1.2M ♥12.3K │"
"│>>   2. mistralai/Mistral-7B-v0.3 by mistralai ↓987.7K ♥8.9│"
"│     3. Qwen/Qwen2.5-Coder-32B-Instruct by Qwen ↓45.7K ♥678│"
"│                                                           │"
"│                                                           │"
"│                                                           │"
"│                                                           │"
"│                                                           │"
"└───────────────────────────────────────────────────────────┘"
"┌Model Information────────────┐┌Repository Files────────────┐"
"│ID: meta-llama/Llama-3.1-8B  ││    README.md  12.06 KB     │"
"│Library: transformers        ││  ▾ Q4_K_M/  4.58 GB (2 file│"
"│Pipeline: text-generation    ││      Llama-3.1-8B-Q4_K_M.gg│"
"│Base Model:                  ││      Llama-3.1-8B-Q4_K_M-00│"
"│meta-llama/Llama-3.1-8B-Instr││  ▸ original/  14.95 GB (1 f│"
"│uct                          ││                            │"
"│License: llama3.2            ││                            │"
"│Languages: en, de            ││                            │"
"└─────────────────────────────┘└────────────────────────────┘"
