src/ui/render/snapshots/rust_hf_downloader__ui__render__snapshot_activity_hud_renders_matrix.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"┌Activity──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│DL   model-Q4_K_M.gguf        █████████████████░░░░░░░░░░░░░░░░░░░░ ch 11/20 ███████████░▓░░░░░░░ 45%  32.8MB/s  ~2m41│"
"│VF   shard-00004.safetensors  █████████████████████████████████████████████████████░░░░░░░░░░░░░ 80%   2.0GB/s     ~0s│"
"│VF   shard-00003.safetensors  ████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░ 60%   2.0GB/s     ~0s│"
"│VF   shard-00002.safetensors  ██████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 40%   2.0GB/s     ~1s│"
"│VF   shard-00001.safetensors  █████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 20%   2.0GB/s     ~1s│"
"│Q    shard-5.gguf                                                                                 --     6.2GB    wait│"
"│Q    shard-6.gguf                                                                                 --     6.2GB    wait│"
"│Q    shard-7.gguf                                                                                 --     6.2GB    wait│"
"│── hash ✓2 ✗0 · verify q 9 (12.0GB) · dl q 4 (18.6GB) · remaining 24GB ~12m21s ─────────────────────────────────────  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
